--- a/laba1/laba1.vcxproj
+++ b/laba1/laba1.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FibonacciNumbers.cpp" />
     <ClCompile Include="FileGenerating.cpp" />
     <ClCompile Include="laba1.cpp" />
     <ClCompile Include="PolyphaseMerge.cpp" />
     <ClCompile Include="Tape.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FibonacciNumbers.h" />
     <ClInclude Include="FileGenerating.h" />
     <ClInclude Include="PolyphaseMerge.h" />
     <ClInclude Include="Tape.h" />
