--- a/laba1/laba1.vcxproj.filters
+++ b/laba1/laba1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="FileGenerating.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FibonacciNumbers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tape.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FileGenerating.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FibonacciNumbers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
