--- a/laba1/laba1.vcxproj.filters
+++ b/laba1/laba1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="FibonacciNumbers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PolyphaseMergeOptimized.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tape.h">
