--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /laba1-1/files/largeUnsortedFile.txt
+/laba1-1/files/sortedFile.txt
