Change user input/output

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /laba1-1/files/largeUnsortedFile.txt
 /laba1-1/files/sortedFile.txt
+/laba1-1/files/sorted.txt
