Change inputFrom User to accept size of a run in bytes

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /laba1-1/files/largeUnsortedFile.txt
 /laba1-1/files/sortedFile.txt
 /laba1-1/files/sorted.txt
+/laba1-1/files/sorted.csv
